--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
-include src/c2pa/libs/*.dylib
-include src/c2pa/libs/*.dll
-include src/c2pa/libs/*.so
+include LICENSE
+include README.md
+include requirements.txt
+include scripts/download_artifacts.py
+recursive-include src/c2pa *.py
