--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,36 +91,42 @@ jobs:
           name: wheels-${{ matrix.target }}
           path: dist
 
-  # windows:
-  #   runs-on: windows-latest
+  windows:
+    runs-on: windows-latest
 
-  #   if: |
-  #     github.event_name != 'pull_request' ||
-  #     github.event.pull_request.author_association == 'COLLABORATOR' ||
-  #     github.event.pull_request.author_association == 'MEMBER' ||
-  #     github.event.pull_request.user.login == 'dependabot[bot]' ||
-  #     contains(github.event.pull_request.labels.*.name, 'safe to test')
+    if: |
+      github.event_name != 'pull_request' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
+      github.event.pull_request.author_association == 'MEMBER' ||
+      github.event.pull_request.user.login == 'dependabot[bot]' ||
+      contains(github.event.pull_request.labels.*.name, 'safe to test')
 
-  #   strategy:
-  #     matrix:
-  #       target: [x64, x86]
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: '3.10'
-  #         architecture: ${{ matrix.target }}
-  #         cache: "pip"
-  #     - name: Install dependencies
-  #       run: pip install -r requirements.txt
-  #     - name: Build wheel
-  #       run: python setup.py bdist_wheel
-
-  #     - name: Upload wheels
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: wheels-${{ matrix.target }}
-  #         path: dist
+    strategy:
+      matrix:
+        target: [x64, x86]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          architecture: ${{ matrix.target }}
+          cache: "pip"
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Prepare build directories
+        run: |
+          mkdir -p artifacts
+          mkdir -p src/c2pa/libs
+          rm -rf dist/* build/*
+      - name: Download native artifacts (from tag c2pa-v0.55.0)
+        run: python3 scripts/download_artifacts.py c2pa-v0.55.0
+      - name: Build wheel
+        run: python setup.py bdist_wheel
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.target }}
+          path: dist
 
   macos_x86:
     runs-on: macos-latest
