--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,39 +23,56 @@ permissions:
   contents: read
 
 jobs:
-  # TODO reactivate tests & debug test runs once publishing squared out
-  # tests:
-  #   name: Unit tests
+  tests:
+    name: Unit tests (developer setup)
 
-  #   if: |
-  #     github.event_name != 'pull_request' ||
-  #     github.event.pull_request.author_association == 'COLLABORATOR' ||
-  #     github.event.pull_request.author_association == 'MEMBER' ||
-  #     github.event.pull_request.user.login == 'dependabot[bot]' ||
-  #     contains(github.event.pull_request.labels.*.name, 'safe to test')
+    if: |
+      github.event_name != 'pull_request' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
+      github.event.pull_request.author_association == 'MEMBER' ||
+      github.event.pull_request.user.login == 'dependabot[bot]' ||
+      contains(github.event.pull_request.labels.*.name, 'safe to test')
 
-  #   runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       os: [ windows-latest, macos-latest, ubuntu-latest ]
-  #       rust_version: [ stable, 1.76.0 ]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ windows-latest, macos-latest, ubuntu-latest ]
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.10"
-  #         cache: "pip"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: "pip"
 
-  #     - run: python -m pip install --upgrade pip
-  #     - run: python -m pip install -r requirements.txt
-  #     - run: python -m pip install pytest
-  #     - run: pytest
+      #- name: Upgrade pip
+      #  run: python -m pip install --upgrade pip
+
+      - name: Install project dependencies
+        run: python -m pip install -r requirements.txt
+
+      - name: Prepare build directories
+        run: |
+          mkdir -p artifacts
+          mkdir -p src/c2pa/libs
+          rm -rf dist/* build/*
+
+      - name: Download native artifacts
+        run: python3 scripts/download_artifacts.py c2pa-v0.55.0
+
+      - name: Install package in development mode
+        run: pip install -e .
+
+      - name: Install pytest
+        run: python -m pip install pytest
+
+      - name: Run tests
+        run: python3 ./tests/test_unit_tests.py
 
   linux:
     uses: ./.github/workflows/build-wheel.yml
