--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,13 @@ jobs:
         run: python3 scripts/download_artifacts.py c2pa-v0.55.0
 
       - name: Install package in development mode
-        run: pip install -e .
+        run: |
+          pip uninstall -y c2pa
+          pip install -e .
+
+      - name: Verify installation
+        run: |
+          python3 -c "from c2pa import C2paError; print('C2paError imported successfully')"
 
       - name: Install pytest
         run: python -m pip install pytest
