--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,8 @@ permissions:
   actions: read
 
 jobs:
-  tests:
-    name: Unit tests (developer setup)
-
+  tests-unix:
+    name: Unit tests (Unix)
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -40,7 +39,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ windows-latest, macos-latest, ubuntu-latest ]
+        os: [ macos-latest, ubuntu-latest ]
 
     steps:
       - name: Checkout repository
@@ -51,9 +50,6 @@ jobs:
         with:
           python-version: "3.10"
           cache: "pip"
-
-      #- name: Upgrade pip
-      #  run: python -m pip install --upgrade pip
 
       - name: Install project dependencies
         run: python -m pip install -r requirements.txt
@@ -76,11 +72,54 @@ jobs:
         run: |
           python3 -c "from c2pa import C2paError; print('C2paError imported successfully')"
 
-      - name: Install pytest
-        run: python -m pip install pytest
-
       - name: Run tests
         run: python3 ./tests/test_unit_tests.py
+
+  tests-windows:
+    name: Unit tests (Windows)
+    if: |
+      github.event_name != 'pull_request' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
+      github.event.pull_request.author_association == 'MEMBER' ||
+      github.event.pull_request.user.login == 'dependabot[bot]' ||
+      contains(github.event.pull_request.labels.*.name, 'safe to test')
+
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: "pip"
+
+      - name: Install project dependencies
+        run: python -m pip install -r requirements.txt
+
+      - name: Prepare build directories
+        run: |
+          mkdir artifacts
+          mkdir src\c2pa\libs
+          if exist dist rmdir /s /q dist
+          if exist build rmdir /s /q build
+
+      - name: Download native artifacts
+        run: python scripts\download_artifacts.py c2pa-v0.55.0
+
+      - name: Install package in development mode
+        run: |
+          pip uninstall -y c2pa
+          pip install -e .
+
+      - name: Verify installation
+        run: |
+          python -c "from c2pa import C2paError; print('C2paError imported successfully')"
+
+      - name: Run tests
+        run: python .\tests\test_unit_tests.py
 
   linux:
     uses: ./.github/workflows/build-wheel.yml
