--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,6 +190,7 @@ jobs:
 
   sdist:
     runs-on: ubuntu-latest
+    needs: [tests-unix, tests-windows]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -212,6 +213,60 @@ jobs:
         with:
           name: wheels-sdist
           path: dist
+
+  tests-linux-wheel:
+    name: Test Linux Wheel
+    needs: build-linux-wheel
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64, aarch64]
+    if: |
+      github.event_name != 'pull_request' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
+      github.event.pull_request.author_association == 'MEMBER' ||
+      github.event.pull_request.user.login == 'dependabot[bot]' ||
+      contains(github.event.pull_request.labels.*.name, 'safe to test')
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: "pip"
+
+      - name: Download wheel artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: wheels-${{ matrix.target }}
+          path: dist
+
+      - name: Create and activate virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+
+      - name: Install wheel
+        run: |
+          pip install --no-index --find-links=dist c2pa
+
+      - name: Run tests directly
+        run: |
+          source venv/bin/activate
+          python ./tests/test_unit_tests.py
+
+      - name: Install pytest (in venv)
+        run: |
+          source venv/bin/activate
+          pip install pytest
+
+      - name: Run tests with pytest (venv)
+        run: |
+          source venv/bin/activate
+          venv/bin/pytest tests/test_unit_tests.py -v
 
   release:
     name: Release
