--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,6 +122,7 @@ jobs:
         run: python .\tests\test_unit_tests.py
 
   build-linux-wheel:
+    name: Build Linux wheel
     uses: ./.github/workflows/build-wheel.yml
     needs: tests-unix
     with:
@@ -140,6 +141,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   build-windows-wheel:
+    name: Build Windows wheel
     uses: ./.github/workflows/build-wheel.yml
     needs: tests-windows
     with:
@@ -159,6 +161,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   build-macos_x86-wheel:
+    name: Build macOS x86_64 wheel
     uses: ./.github/workflows/build-wheel.yml
     needs: tests-unix
     with:
@@ -174,6 +177,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   build-macos_aarch64-wheel:
+    name: Build macOS aarch64 wheel
     uses: ./.github/workflows/build-wheel.yml
     needs: tests-unix
     with:
