--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,6 +128,7 @@ jobs:
     with:
       python-version: "3.10"
       artifact-name: wheels-${{ matrix.target }}
+      runs-on: ubuntu-latest
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     strategy:
@@ -148,6 +149,7 @@ jobs:
       python-version: "3.10"
       architecture: ${{ matrix.target }}
       artifact-name: wheels-${{ matrix.target }}
+      runs-on: windows-latest
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     strategy:
@@ -167,6 +169,7 @@ jobs:
     with:
       python-version: "3.10"
       artifact-name: wheels-mac-x86_64
+      runs-on: macos-latest
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     if: |
@@ -183,6 +186,7 @@ jobs:
     with:
       python-version: "3.10"
       artifact-name: wheels-mac-aarch64
+      runs-on: macos-latest
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
     if: |
@@ -219,7 +223,7 @@ jobs:
           path: dist
 
   tests-linux-wheel:
-    name: Test Linux Wheel
+    name: Test Linux wheel
     needs: build-linux-wheel
     runs-on: ubuntu-latest
     strategy:
