--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -48,6 +48,8 @@ jobs:
             rm -rf dist/* build/*
           fi
       - name: Download native artifacts (from tag c2pa-v0.55.0)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python3 scripts/download_artifacts.py c2pa-v0.55.0
       - name: Build wheel
         run: python setup.py bdist_wheel
