--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,8 @@ jobs:
           rm -rf dist/* build/*
 
       - name: Download native artifacts
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python3 scripts/download_artifacts.py c2pa-v0.55.0
 
       - name: Install package in development mode
@@ -107,6 +109,8 @@ jobs:
           if (Test-Path build) { Remove-Item -Recurse -Force build }
 
       - name: Download native artifacts
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: python scripts\download_artifacts.py c2pa-v0.55.0
 
       - name: Install package in development mode
