--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,20 +145,13 @@ jobs:
       github.event.pull_request.user.login == 'dependabot[bot]' ||
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
-  build-windows-wheel:
-    name: Build Windows wheel
-    uses: ./.github/workflows/build-wheel.yml
-    needs: tests-windows
-    with:
-      python-version: "3.10"
-      architecture: ${{ matrix.target }}
-      artifact-name: wheels-${{ matrix.target }}
-      runs-on: windows-latest
-    secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
+  test-built-linux-wheel:
+    name: Test Linux wheel
+    needs: build-linux-wheel
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x64, x86]
+        target: [x86_64, aarch64]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -166,39 +159,109 @@ jobs:
       github.event.pull_request.user.login == 'dependabot[bot]' ||
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
-  build-macos_x86-wheel:
-    name: Build macOS x86_64 wheel
-    uses: ./.github/workflows/build-wheel.yml
-    needs: tests-unix
-    with:
-      python-version: "3.10"
-      artifact-name: wheels-mac-x86_64
-      runs-on: macos-latest
-    secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
-    if: |
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.author_association == 'COLLABORATOR' ||
-      github.event.pull_request.author_association == 'MEMBER' ||
-      github.event.pull_request.user.login == 'dependabot[bot]' ||
-      contains(github.event.pull_request.labels.*.name, 'safe to test')
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  build-macos_aarch64-wheel:
-    name: Build macOS aarch64 wheel
-    uses: ./.github/workflows/build-wheel.yml
-    needs: tests-unix
-    with:
-      python-version: "3.10"
-      artifact-name: wheels-mac-aarch64
-      runs-on: macos-latest
-    secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
-    if: |
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.author_association == 'COLLABORATOR' ||
-      github.event.pull_request.author_association == 'MEMBER' ||
-      github.event.pull_request.user.login == 'dependabot[bot]' ||
-      contains(github.event.pull_request.labels.*.name, 'safe to test')
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: "pip"
+
+      - name: Download wheel artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: wheels-${{ matrix.target }}
+          path: dist
+
+      - name: Create and activate virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+
+      - name: List available wheels
+        run: |
+          source venv/bin/activate
+          echo "Contents of dist directory:"
+          ls -la dist/
+          echo "Available wheels:"
+          pip index versions --no-index --find-links=dist c2pa
+
+      - name: Install wheel
+        run: |
+          source venv/bin/activate
+          pip install --no-index --find-links=dist c2pa --verbose
+
+      - name: Run tests directly
+        run: |
+          source venv/bin/activate
+          python ./tests/test_unit_tests.py
+
+      - name: Install pytest (in venv)
+        run: |
+          source venv/bin/activate
+          pip install pytest
+
+      - name: Run tests with pytest (venv)
+        run: |
+          source venv/bin/activate
+          venv/bin/pytest tests/test_unit_tests.py -v
+
+  # build-windows-wheel:
+  #   name: Build Windows wheel
+  #   uses: ./.github/workflows/build-wheel.yml
+  #   needs: tests-windows
+  #   with:
+  #     python-version: "3.10"
+  #     architecture: ${{ matrix.target }}
+  #     artifact-name: wheels-${{ matrix.target }}
+  #     runs-on: windows-latest
+  #   secrets:
+  #     github-token: ${{ secrets.GITHUB_TOKEN }}
+  #   strategy:
+  #     matrix:
+  #       target: [x64, x86]
+  #   if: |
+  #     github.event_name != 'pull_request' ||
+  #     github.event.pull_request.author_association == 'COLLABORATOR' ||
+  #     github.event.pull_request.author_association == 'MEMBER' ||
+  #     github.event.pull_request.user.login == 'dependabot[bot]' ||
+  #     contains(github.event.pull_request.labels.*.name, 'safe to test')
+
+  # build-macos_x86-wheel:
+  #   name: Build macOS x86_64 wheel
+  #   uses: ./.github/workflows/build-wheel.yml
+  #   needs: tests-unix
+  #   with:
+  #     python-version: "3.10"
+  #     artifact-name: wheels-mac-x86_64
+  #     runs-on: macos-latest
+  #   secrets:
+  #     github-token: ${{ secrets.GITHUB_TOKEN }}
+  #   if: |
+  #     github.event_name != 'pull_request' ||
+  #     github.event.pull_request.author_association == 'COLLABORATOR' ||
+  #     github.event.pull_request.author_association == 'MEMBER' ||
+  #     github.event.pull_request.user.login == 'dependabot[bot]' ||
+  #     contains(github.event.pull_request.labels.*.name, 'safe to test')
+
+  # build-macos_aarch64-wheel:
+  #   name: Build macOS aarch64 wheel
+  #   uses: ./.github/workflows/build-wheel.yml
+  #   needs: tests-unix
+  #   with:
+  #     python-version: "3.10"
+  #     artifact-name: wheels-mac-aarch64
+  #     runs-on: macos-latest
+  #   secrets:
+  #     github-token: ${{ secrets.GITHUB_TOKEN }}
+  #   if: |
+  #     github.event_name != 'pull_request' ||
+  #     github.event.pull_request.author_association == 'COLLABORATOR' ||
+  #     github.event.pull_request.author_association == 'MEMBER' ||
+  #     github.event.pull_request.user.login == 'dependabot[bot]' ||
+  #     contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   sdist:
     runs-on: ubuntu-latest
@@ -226,12 +289,13 @@ jobs:
           name: wheels-sdist
           path: dist
 
+
   release:
     name: Release
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true'
     runs-on: ubuntu-latest
     environment: pypipublish
-    needs: [build-linux-wheel, build-windows-wheel, build-macos_x86-wheel, build-macos_aarch64-wheel, sdist]
+    needs: [build-linux-wheel, sdist]
     permissions:
       id-token: write
       contents: read
