--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,53 +77,53 @@ jobs:
       - name: Run tests
         run: python3 ./tests/test_unit_tests.py
 
-  tests-windows:
-    name: Unit tests for developer setup (Windows)
-    if: |
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.author_association == 'COLLABORATOR' ||
-      github.event.pull_request.author_association == 'MEMBER' ||
-      github.event.pull_request.user.login == 'dependabot[bot]' ||
-      contains(github.event.pull_request.labels.*.name, 'safe to test')
+  # tests-windows:
+  #   name: Unit tests for developer setup (Windows)
+  #   if: |
+  #     github.event_name != 'pull_request' ||
+  #     github.event.pull_request.author_association == 'COLLABORATOR' ||
+  #     github.event.pull_request.author_association == 'MEMBER' ||
+  #     github.event.pull_request.user.login == 'dependabot[bot]' ||
+  #     contains(github.event.pull_request.labels.*.name, 'safe to test')
 
-    runs-on: windows-latest
+  #   runs-on: windows-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-          cache: "pip"
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.10"
+  #         cache: "pip"
 
-      - name: Install project dependencies
-        run: python -m pip install -r requirements.txt
+  #     - name: Install project dependencies
+  #       run: python -m pip install -r requirements.txt
 
-      - name: Prepare build directories
-        run: |
-          New-Item -ItemType Directory -Force -Path artifacts
-          New-Item -ItemType Directory -Force -Path src\c2pa\libs
-          if (Test-Path dist) { Remove-Item -Recurse -Force dist }
-          if (Test-Path build) { Remove-Item -Recurse -Force build }
+  #     - name: Prepare build directories
+  #       run: |
+  #         New-Item -ItemType Directory -Force -Path artifacts
+  #         New-Item -ItemType Directory -Force -Path src\c2pa\libs
+  #         if (Test-Path dist) { Remove-Item -Recurse -Force dist }
+  #         if (Test-Path build) { Remove-Item -Recurse -Force build }
 
-      - name: Download native artifacts
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python scripts\download_artifacts.py c2pa-v0.55.0
+  #     - name: Download native artifacts
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       run: python scripts\download_artifacts.py c2pa-v0.55.0
 
-      - name: Install package in development mode
-        run: |
-          pip uninstall -y c2pa
-          pip install -e .
+  #     - name: Install package in development mode
+  #       run: |
+  #         pip uninstall -y c2pa
+  #         pip install -e .
 
-      - name: Verify installation
-        run: |
-          python -c "from c2pa import C2paError; print('C2paError imported successfully')"
+  #     - name: Verify installation
+  #       run: |
+  #         python -c "from c2pa import C2paError; print('C2paError imported successfully')"
 
-      - name: Run tests
-        run: python .\tests\test_unit_tests.py
+  #     - name: Run tests
+  #       run: python .\tests\test_unit_tests.py
 
   build-linux-wheel:
     name: Build Linux wheel
@@ -187,16 +187,11 @@ jobs:
           ls -la dist/
           echo "Wheel files:"
           find dist -name "*.whl" -type f
-          echo "Wheel file details:"
-          for wheel in dist/*.whl; do
-            echo "=== $wheel ==="
-            unzip -l "$wheel" | grep -E "c2pa|\.so|\.dll|\.dylib"
-          done
 
       - name: Install wheel
         run: |
           source venv/bin/activate
-          pip install --no-index --find-links=dist c2pa_python --verbose
+          pip install dist/c2pa_python-*.whl
 
       - name: Run tests directly
         run: |
@@ -270,7 +265,7 @@ jobs:
 
   sdist:
     runs-on: ubuntu-latest
-    needs: [tests-unix, tests-windows]
+    needs: [tests-unix]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
