--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,7 +146,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   test-built-linux-wheel:
-    name: Test Linux wheel
+    name: Test wheel built for Linux
     needs: build-linux-wheel
     runs-on: ubuntu-latest
     strategy:
@@ -222,7 +222,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   test-built-windows-wheel:
-    name: Test Windows wheel
+    name: Test wheel built for Windows
     needs: build-windows-wheel
     runs-on: windows-latest
     strategy:
@@ -278,16 +278,19 @@ jobs:
           .\venv\Scripts\activate
           .\venv\Scripts\pytest .\tests\test_unit_tests.py -v
 
-  build-macos_x86-wheel:
-    name: Build macOS x86_64 wheel
+  build-macos-wheel:
+    name: Build macOS wheel
     uses: ./.github/workflows/build-wheel.yml
     needs: tests-unix
     with:
       python-version: "3.10"
-      artifact-name: wheels-mac-x86_64
+      artifact-name: wheels-mac-${{ matrix.target }}
       runs-on: macos-latest
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
+    strategy:
+      matrix:
+        target: [x86_64, aarch64]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -295,10 +298,13 @@ jobs:
       github.event.pull_request.user.login == 'dependabot[bot]' ||
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
-  test-built-macos_x86-wheel:
-    name: Test macOS x86_64 wheel
-    needs: build-macos_x86-wheel
+  test-built-macos-wheel:
+    name: Test wheel built for macOS
+    needs: build-macos-wheel
     runs-on: macos-latest
+    strategy:
+      matrix:
+        target: [x86_64, aarch64]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
@@ -319,76 +325,7 @@ jobs:
       - name: Download wheel artifacts
         uses: actions/download-artifact@v4
         with:
-          name: wheels-mac-x86_64
-          path: dist
-
-      - name: Create and activate virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Install wheel for testing
-        run: |
-          source venv/bin/activate
-          pip install dist/c2pa_python-*.whl
-
-      - name: Run unittest tests on installed wheel
-        run: |
-          source venv/bin/activate
-          python ./tests/test_unit_tests.py
-
-      - name: Install pytest (in venv)
-        run: |
-          source venv/bin/activate
-          pip install pytest
-
-      - name: Run tests with pytest (venv)
-        run: |
-          source venv/bin/activate
-          venv/bin/pytest tests/test_unit_tests.py -v
-
-  build-macos_aarch64-wheel:
-    name: Build macOS aarch64 wheel
-    uses: ./.github/workflows/build-wheel.yml
-    needs: tests-unix
-    with:
-      python-version: "3.10"
-      artifact-name: wheels-mac-aarch64
-      runs-on: macos-latest
-    secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
-    if: |
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.author_association == 'COLLABORATOR' ||
-      github.event.pull_request.author_association == 'MEMBER' ||
-      github.event.pull_request.user.login == 'dependabot[bot]' ||
-      contains(github.event.pull_request.labels.*.name, 'safe to test')
-
-  test-built-macos_aarch64-wheel:
-    name: Test macOS aarch64 wheel
-    needs: build-macos_aarch64-wheel
-    runs-on: macos-latest
-    if: |
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.author_association == 'COLLABORATOR' ||
-      github.event.pull_request.author_association == 'MEMBER' ||
-      github.event.pull_request.user.login == 'dependabot[bot]' ||
-      contains(github.event.pull_request.labels.*.name, 'safe to test')
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-          cache: "pip"
-
-      - name: Download wheel artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: wheels-mac-aarch64
+          name: wheels-mac-${{ matrix.target }}
           path: dist
 
       - name: Create and activate virtual environment
@@ -448,7 +385,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true'
     runs-on: ubuntu-latest
     environment: pypipublish
-    needs: [test-built-linux-wheel, test-built-macos_x86-wheel, test-built-macos_aarch64-wheel, test-built-windows-wheel, sdist]
+    needs: [test-built-linux-wheel, test-built-macos-wheel, test-built-windows-wheel, sdist]
     permissions:
       id-token: write
       contents: read
