--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -146,7 +146,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   test-built-linux-wheel:
-    name: Test wheel built for Linux
+    name: Test Linux built wheel
     needs: build-linux-wheel
     runs-on: ubuntu-latest
     strategy:
@@ -222,7 +222,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   test-built-windows-wheel:
-    name: Test wheel built for Windows
+    name: Test Windows built wheel
     needs: build-windows-wheel
     runs-on: windows-latest
     strategy:
@@ -299,7 +299,7 @@ jobs:
       contains(github.event.pull_request.labels.*.name, 'safe to test')
 
   test-built-macos-wheel:
-    name: Test wheel built for macOS
+    name: Test macOS built wheel
     needs: build-macos-wheel
     runs-on: macos-latest
     strategy:
@@ -355,7 +355,7 @@ jobs:
 
   sdist:
     runs-on: ubuntu-latest
-    needs: [tests-unix]
+    needs: [tests-unix, tests-windows]
     if: |
       github.event_name != 'pull_request' ||
       github.event.pull_request.author_association == 'COLLABORATOR' ||
